fix white spacing

--- a/style.css
+++ b/style.css
@@ -262,7 +262,8 @@ section.faqs {
   }
 
   .faqs article {
-    padding: 150px 40px 60px;
+    padding: 150px 15px 60px;
+    margin: 50px 0 auto;
   }
   .faqs article > div {
     padding-top: 100px;
